markup and style catalog page

--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ a {
 }
 
 .button {
-  display: inline-block;
+  min-width: 200px;
   padding: 27px 24px;
   font-size: 16px;
   line-height: 19px;
@@ -286,14 +286,14 @@ a {
 }
 
 .read-more {
-  width: 200px;
+  display: inline-block;
   box-sizing: border-box;
   text-align: center;
 }
 
 .main-footer {
   padding: 50px 0;
-  background-color:#151c22;
+  background-color: #151c22;
 }
 
 .main-footer-wrapper {
@@ -334,3 +334,133 @@ a {
   padding: 0;
   list-style: none;
 }
+
+.catalog-header {
+  background-color: #f1f2f4;
+}
+
+.catalog-header-wrapper {
+  display: flex;
+}
+
+.catalog-header-text-column {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  box-sizing: border-box;
+  width: 570px;
+  padding-right: 57px;
+}
+
+.breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 0 39px 0;
+  padding: 0;
+  list-style: none;
+}
+
+.breadcrumbs-item {
+  position: relative;
+  margin-right: 30px;
+  color: #727a82;
+}
+
+.breadcrumbs-current-item {
+  color: inherit;
+}
+
+.breadcrumbs-item::after {
+  position: absolute;
+  content: "/";
+  top: 0;
+  right: -10px;
+  width: 0;
+  height: 0;
+  background-color: #727a82;
+
+}
+
+.breadcrumbs-link {
+  text-decoration: none;
+}
+
+.catalog-title {
+  margin: 0;
+  width: 272px;
+  font-size: 32px;
+  line-height: 40px;
+}
+
+.catalog-header-img-wrapper {
+  width: 299px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.catalog-header-img-wrapper img {
+  vertical-align: middle;
+}
+
+.catalog {
+  display: flex;
+  flex-direction: column;
+  padding: 40px 0 130px;
+}
+
+.catalog-filters {
+  position: relative;
+  margin-left: auto;
+  padding: 18px 151px 18px 18px;
+  font-size: 18px;
+  line-height: 21px;
+  border: 2px solid #151c22;
+  appearance: none;
+  background-image: url('img/arrow-down-select.svg');
+  background-repeat: no-repeat;
+  background-position: 200px 50%;
+}
+
+.catalog-list-compact {
+  margin: 40px -66px 0 0;
+}
+
+.catalog-list-compact .catalog-item {
+  width: 243px;
+  margin-right: 66px;
+  margin-bottom: 66px;
+}
+
+.catalog-progress-bar {
+  position: relative;
+  margin: 17px auto 0;
+  font-weight: 400;
+}
+
+.catalog-progress-bar::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 2px;
+  background-color: #e5e5e5;
+}
+
+.catalog-progress-bar::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: -5px;
+  width: 40px;
+  height: 2px;
+  background-color: #151c22;
+}
+
+
+.catalog-load-more {
+  align-self: center;
+  margin-top: 40px;
+  border: none;
+}
+
